--- a/src/config.yaml
+++ b/src/config.yaml
@@ -11,18 +11,18 @@ site:
 # Default SEO metadata
 metadata:
   title:
-    default: AstroWind
-    template: '%s — AstroWind'
-  description: "\U0001F680 Suitable for Startups, Small Business, Sass Websites, Professional Portfolios, Marketing Websites, Landing Pages & Blogs."
+    default: Dev Smith's portfolio
+    template: '%s — Dev Smith'
+  description: "Dev Smith's portfolio."
   robots:
     index: true
     follow: true
   openGraph:
-    site_name: AstroWind
+    site_name: Dev Smith's portfolio
     images:
       - url: '~/assets/images/default.png'
-        width: 1200
-        height: 628
+        width: 1920
+        height: 1200
     type: website
   twitter:
     handle: '@onwidget'
